--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,12 @@
+html {
+    scroll-behavior: smooth;
+  }
+  
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-
-header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 aside {
