--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "@fortawesome/fontawesome-free/css/all.min.css";
+
 html {
     scroll-behavior: smooth;
   }
@@ -13,13 +15,6 @@ aside {
     width: 200px;
     background-color: #f4f4f4;
     padding: 15px;
-}
-
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
 }
 
 .app-container {
